<resources>
    <string name="app_name">Swoosh2</string>
    <string name="applogo">appLogo</string>
    <string name="swooshbackground">swooshBackground</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_amp_dominate_the_league">
        <![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="men">MEN</string>
    <string name="woman">WOMAN</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="desired_league">Desired League</string>
    <string name="togglebutton">togglebutton</string>
    <string name="searchleaguestext">searchLeaguesText</string>
</resources>
