<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.leagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:scaleType="centerCrop" android:contentDescription="@string/swooshbackground"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/applogo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textSize="14sp"
            android:fontFamily="@font/montserrat" android:textColor="@color/colorAccent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView"
    >
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="279dp"
                tools:layout_editor_absoluteX="170dp" android:id="@+id/menLeagueBtn" android:textOn="@string/men"
                android:textOff="@string/men" android:background="@drawable/swoosh_button"
                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
                android:onClick="onMensClicked"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="213dp"
                android:id="@+id/womanLeagueaBtn" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" android:textOff="@string/woman" android:textOn="@string/woman"
                android:background="@drawable/swoosh_button" android:textColor="@color/colorAccent"
                android:fontFamily="@font/montserrat" android:onClick="onWomanClicked"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="364dp"
                tools:layout_editor_absoluteX="170dp" android:id="@+id/co_edLeagueBtn" android:textOn="@string/co_ed"
                android:textOff="@string/co_ed" android:background="@drawable/swoosh_button"
                android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
                android:onClick="onCoEdClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/leagueNextBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
            android:onClick="onLeagueNextBtn"/>

</android.support.constraint.ConstraintLayout>