<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/swooshbackground"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/applogo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textSize="36sp"
            android:fontFamily="@font/montserrat" android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/on_going_all_out" android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_amp_dominate_the_league"
            android:layout_width="216dp"
            android:layout_height="37dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:fontFamily="@font/montserrat"
            android:textSize="14sp" android:textColor="@color/colorAccent" android:textAlignment="center"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/getStartedBtn"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:fontFamily="@font/montserrat"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorAccent"
            android:layout_marginBottom="16dp" android:background="@drawable/swoosh_button"/>
</android.support.constraint.ConstraintLayout>